--- a/src/styles/doctors.scss
+++ b/src/styles/doctors.scss
@@ -133,8 +133,9 @@
     }
     &__card {
       flex-direction: column;
-      img {
+      &__image{
         width: 100%;
+        height: 170px;
       }
       &__info {
         width: 100%;
@@ -167,12 +168,3 @@
     }
   }
 }
-
-// @media(max-width: 350px) {
-//     .doctors {
-//         &__card {
-//             width: 100%;
-//             margin-right: 0;
-//         }
-//     }
-// }
